--- a/templates/one_product_template.html
+++ b/templates/one_product_template.html
@@ -16,7 +16,7 @@
             <div class="col-md-6 col-xs-12">
                 <p class="text-left text-md-right"><strong>Product Description</strong></p>
                 <p>{{product.fulldescription}}</p>
-                <a href="#!main" class="btn btn-outline-secondary float-right">Go Back</a>
+                <a href="#!main/#{{product.anchor}}" class="btn btn-outline-secondary float-right">Go Back</a>
             </div>
         </div>
         <!-- Product content end -->
