--- a/templates/main_products_template.html
+++ b/templates/main_products_template.html
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="card-columns">
             <div class="card" data-ng-repeat="product in products">
-                <img class="card-img-top" ng-src="{{product.imagelink}}" alt="Card image cap">
+                <img id="{{product.anchor}}" class="card-img-top" ng-src="{{product.imagelink}}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">{{product.title}}</h5>
                     <p class="card-text">{{product.description}}</p>
