added a order now button

--- a/templates/one_product_template.html
+++ b/templates/one_product_template.html
@@ -16,7 +16,10 @@
             <div class="col-md-6 col-xs-12">
                 <p class="text-left text-md-right"><strong>Product Description</strong></p>
                 <p>{{product.fulldescription}}</p>
-                <a href="#!main/#{{product.anchor}}" class="btn btn-outline-secondary float-right">Go Back</a>
+                <div class="float-right">
+                    <a href="#!order/#{{product.anchor}}" class="btn btn-outline-success">Order One</a>
+                    <a href="#!main/#{{product.anchor}}" class="btn btn-outline-secondary">Go Back</a>
+                </div>
             </div>
         </div>
         <!-- Product content end -->
