moved json files

--- a/templates/main_products_template.html
+++ b/templates/main_products_template.html
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{product.title}}</h5>
                     <p class="card-text">{{product.description}}</p>
-                    <a href="{{product.productlink}}" class="btn btn-outline-secondary">More Info</a>
+                    <a href="{{product.productlink}}" class="btn btn-outline-info">More Info</a>
                 </div>
             </div>
         </div>
