--- a/templates/one_product_template.html
+++ b/templates/one_product_template.html
@@ -17,7 +17,7 @@
                 <p class="text-left text-md-right"><strong>Product Description</strong></p>
                 <p>{{product.fulldescription}}</p>
                 <div class="float-right">
-                    <a href="#!order/#{{product.anchor}}" class="btn btn-outline-success">Order One</a>
+                    <a href="#!order/#{{product.anchor}}" class="btn btn-outline-success">Order</a>
                     <a href="#!main/#{{product.anchor}}" class="btn btn-outline-secondary">Go Back</a>
                 </div>
             </div>
