added route for orders

--- a/templates/one_product_template.html
+++ b/templates/one_product_template.html
@@ -11,13 +11,13 @@
         <!-- Product content start -->
         <div class="row">
             <div class="col-md-6 col-xs-12">
-                <img class="img-fluid rounded float-left" ng-src="{{product.imagelink}}" alt="">
+                <img class="img-fluid rounded shadow float-left" ng-src="{{product.imagelink}}" alt="">
             </div>
             <div class="col-md-6 col-xs-12">
                 <p class="text-left text-md-right"><strong>Product Description</strong></p>
                 <p>{{product.fulldescription}}</p>
                 <div class="float-right">
-                    <a href="#!order/#{{product.anchor}}" class="btn btn-outline-success">Order</a>
+                    <a href="#!order/{{product.anchor}}" class="btn btn-outline-success">Order</a>
                     <a href="#!main/#{{product.anchor}}" class="btn btn-outline-secondary">Go Back</a>
                 </div>
             </div>
