--- a/templates/disclaimer.html
+++ b/templates/disclaimer.html
@@ -12,7 +12,7 @@
                 <div class="col-md-12 col-xs-12">
                     <ul>
                         <li data-ng-repeat="bullets in page.content">
-                            <span ng-bind-html="bullets"></span>
+                            <span data-ng-bind-html="bullets"></span>
                         </li>
                     </ul>                
                 </div>
