--- a/templates/main_products_template.html
+++ b/templates/main_products_template.html
@@ -1,12 +1,33 @@
 <!-- Jumbotron start -->
 <div class="row">
-    <div class="jumbotron jumbotron-fluid my-3 col-md-12">
+    <div class="jumbotron my-3 col-md-12">
         <div class="container">
-            <h1 class="display-4">Big Corporation Corp.</h1>
-            <p class="lead">We are a major corporation that sells many many things to people and we are the embodiment of CAPITALISM!</p>
+            <div data-ng-show="showJumbotron">
+                <h1 class="display-4">Kerousheworks</h1>
+                <span class="lead">Made with tender loving care.</span>
+            </div>
+
+            <div data-ng-show="showSearch">
+                <form action="">
+                    <h1 class="display-4 text-center">Looking for something?</h1>
+                    <div class="container">
+                        <div class="form-group form-row">
+                            <label class="lead" for="productSearch">Search</label>
+                            <input class="form-control" id="productSearch" data-ng-model="obj.title" placeholder="Search Product" type="text">    
+                        </div>
+                        <div class="form-group form-row">
+                            <label class="lead" for="categorysearch">Category</label>
+                            <select data-ng-model="obj.category" class="custom-select" id="categorysearch">    
+                                <option value="" selected>All</option>
+                                <option value="{{i.toLowerCase()}}" data-ng-repeat="i in categories">{{i | capitalize}}</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>    
-</div>
+    </div> 
+</div>      
 <!-- Jumbotron end -->
 
 
@@ -19,7 +40,7 @@
     <div class="row">
         <div class="card-columns">
             <card 
-                data-ng-repeat="product in products" 
+                data-ng-repeat="product in products | filter : obj" 
                 anchor="{{product.anchor}}" 
                 imagelink="{{product.imagelink}}"
                 title="{{product.title}}"
