--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -7,8 +7,13 @@ html
 body 
 {
     margin-bottom: 60px; /* Margin bottom by footer height */
-    padding-top: 4.5rem;
+    padding-top: 4.0rem;
 }
+
+.jumbotron {
+    background-image: url("../../content/images/jumbotron_bg.jpg");
+    background-size: cover;
+  }
 
 .footer 
 {
@@ -25,7 +30,7 @@ body
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-  }
+}
   
   /* On mouse-over, add a deeper shadow */
 .card:hover 
